General information about the project

--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -2,9 +2,13 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Self Hosted Workerd - OpWork">
   <main>
     <h1>Hello, OpWork!</h1>
     <p class="instructions">Just loading the site...</p>
+
+    <hr />
+    But you can check out the demo <a href="https://runtime.opwork.dev/">here</a
+    >.
   </main>
 </Layout>
