--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -7,6 +7,9 @@ import Layout from "../layouts/Layout.astro";
     <h1>Hello, OpWork!</h1>
     <p class="instructions">Just loading the site...</p>
 
+    <h3>Quick start:</h3>
+    <code> docker run -it -80:3000 opwork/runtime:latest</code>
+
     <hr />
     But you can check out the demo <a href="https://runtime.opwork.dev/">here</a
     >.
