--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro";
     <p class="instructions">Just loading the site...</p>
 
     <h3>Quick start:</h3>
-    <code> docker run -it -80:3000 opwork/runtime:latest</code>
+    <code> docker run -it -p80:3000 opwork/runtime:latest</code>
 
     <hr />
     But you can check out the demo <a href="https://runtime.opwork.dev/">here</a
