--- a/www/src/layouts/Layout.astro
+++ b/www/src/layouts/Layout.astro
@@ -14,6 +14,12 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <meta
+      name="description"
+      content="Self hosted management interface built for CloudFlare's workerd in Docker"
+    />
+
+    <meta name="robots" content="index, follow" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
