--- a/runtime/src/view/index.html
+++ b/runtime/src/view/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Runtime - OpWork.dev</title>
+    <link
+      rel="shortcut icon"
+      href="./images/logo/colour.svg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div id="opwork-root"></div>
-    <script type="module" src="main.tsx"></script>
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
