--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -8,44 +8,129 @@ import Layout from "../layouts/Layout.astro";
     <div class="container max-w-7xl mx-auto flex items-center h-12">
       <a href="https://opwork.dev" target="_self">
         <svg
-          width="40"
-          height="40"
-          class="mr-3"
-          viewBox="0 0 480 480"
-          version="1.1"
           xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink"
-          xml:space="preserve"
-          xmlns:serif="http://www.serif.com/"
-          style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
-        >
-          <g transform="matrix(1.12744,0,0,1.09969,-30.6097,-22.0989)">
-            <path
-              fill="currentColor"
-              d="M444.024,133.764C444.024,76.048 398.319,29.189 342.023,29.189L138.021,29.189C81.725,29.189 36.019,76.048 36.019,133.764L36.019,342.914C36.019,400.631 81.725,447.489 138.021,447.489L342.023,447.489C398.319,447.489 444.024,400.631 444.024,342.914L444.024,133.764Z"
-              style="fill:rgb(235,235,235);fill-opacity:0;"></path>
-            <path
-              fill="currentColor"
-              d="M444.024,133.764C444.024,76.048 398.319,29.189 342.023,29.189L138.021,29.189C81.725,29.189 36.019,76.048 36.019,133.764L36.019,342.914C36.019,400.631 81.725,447.489 138.021,447.489L342.023,447.489C398.319,447.489 444.024,400.631 444.024,342.914L444.024,133.764ZM426.285,133.764L426.285,342.914C426.285,390.593 388.529,429.302 342.023,429.302L138.021,429.302C91.515,429.302 53.759,390.593 53.759,342.914L53.759,133.764C53.759,86.085 91.515,47.376 138.021,47.376L342.023,47.376C388.529,47.376 426.285,86.085 426.285,133.764Z"
-            ></path>
-          </g>
-          <g fill="currentColor" transform="matrix(1,0,0,1,-4.50731,94.207)">
-            <text
-              x="67.32px"
-              y="188.196px"
-              style="font-family:'DINAlternate-Bold', 'DIN Alternate', sans-serif;font-weight:700;font-size:288px;"
-            >
-              OP
-            </text>
-          </g>
-          <g fill="currentColor" transform="matrix(1,0,0,1,167.111,29.0349)">
-            <text
-              x="-94.002px"
-              y="370.519px"
-              style="font-family:'DINAlternate-Bold', 'DIN Alternate', sans-serif;font-weight:700;font-size:120px;"
-            >
-              WORK
-            </text>
+          viewBox="0 0 222.54 194.88"
+          width="40"
+          height="40"
+          class="mr-4"
+          ><defs
+            ><style>
+              .cls-1 {
+                isolation: isolate;
+              }
+              .cls-2 {
+                fill: url(#linear-gradient);
+              }
+              .cls-3,
+              .cls-5 {
+                mix-blend-mode: multiply;
+              }
+              .cls-3 {
+                fill: url(#linear-gradient-2);
+              }
+              .cls-4,
+              .cls-6,
+              .cls-7,
+              .cls-8 {
+                mix-blend-mode: screen;
+              }
+              .cls-4 {
+                fill: url(#linear-gradient-3);
+              }
+              .cls-5 {
+                fill: url(#linear-gradient-4);
+              }
+              .cls-6 {
+                fill: url(#linear-gradient-5);
+              }
+              .cls-7 {
+                fill: url(#radial-gradient);
+              }
+              .cls-8 {
+                fill: url(#radial-gradient-2);
+              }
+            </style><linearGradient
+              id="linear-gradient"
+              x1="111.27"
+              y1="12.73"
+              x2="111.27"
+              y2="198.28"
+              gradientUnits="userSpaceOnUse"
+              ><stop offset="0" stop-color="#ff5f00"></stop><stop
+                offset="1"
+                stop-color="#ffab00"></stop>
+            </linearGradient><linearGradient
+              id="linear-gradient-2"
+              x1="249.24"
+              y1="151.23"
+              x2="-7.51"
+              y2="76.04"
+              gradientUnits="userSpaceOnUse"
+              ><stop offset="0" stop-color="#bd5500"></stop><stop
+                offset="1"
+                stop-color="#fff"></stop>
+            </linearGradient><linearGradient
+              id="linear-gradient-3"
+              x1="-95.81"
+              y1="51.56"
+              x2="257.16"
+              y2="115.55"
+              gradientUnits="userSpaceOnUse"
+              ><stop offset="0" stop-color="#fff"></stop><stop offset="1"
+              ></stop>
+            </linearGradient><linearGradient
+              id="linear-gradient-4"
+              x1="185.23"
+              y1="120.46"
+              x2="-63.41"
+              y2="164.02"
+              xlink:href="#linear-gradient-2"></linearGradient><linearGradient
+              id="linear-gradient-5"
+              x1="335.3"
+              y1="108.72"
+              x2="11.78"
+              y2="165.4"
+              xlink:href="#linear-gradient-3"></linearGradient><radialGradient
+              id="radial-gradient"
+              cx="177.27"
+              cy="110.6"
+              r="70.18"
+              xlink:href="#linear-gradient-3"></radialGradient><radialGradient
+              id="radial-gradient-2"
+              cx="190.43"
+              cy="166.43"
+              r="63.78"
+              xlink:href="#linear-gradient-3"></radialGradient>
+          </defs><g class="cls-1"
+            ><g id="Layer_2" data-name="Layer 2"
+              ><g id="Logo"
+                ><g id="Fox"
+                  ><path
+                    class="cls-2"
+                    d="M220.5,107.45l-26.36-21,14-80.14A5.41,5.41,0,0,0,200,.75L144.87,33.33H77.67L22.53.75a5.41,5.41,0,0,0-8.08,5.59l14,80.14L2,107.45A5.4,5.4,0,0,0,2.21,116l105.86,77.79.1,0a5.53,5.53,0,0,0,1.39.71l.15,0a5.42,5.42,0,0,0,1.56.25,5.48,5.48,0,0,0,1.57-.25l.14,0a5.53,5.53,0,0,0,1.39-.71l.1,0L220.34,116a5.41,5.41,0,0,0,.16-8.59Z"
+                  ></path><path
+                    class="cls-3"
+                    d="M22.53.75a5.41,5.41,0,0,0-8.08,5.59l14,80.14L2,107.45A5.4,5.4,0,0,0,2.21,116l105.86,77.79.1,0a5.53,5.53,0,0,0,1.39.71l.15,0a5.42,5.42,0,0,0,1.56.25L77.67,33.33Z"
+                  ></path><path
+                    class="cls-4"
+                    d="M112.84,194.63l.14,0a5.53,5.53,0,0,0,1.39-.71l.1,0L220.34,116a5.41,5.41,0,0,0,.16-8.59l-26.36-21,14-80.14A5.41,5.41,0,0,0,200,.75L144.87,33.33l-33.6,161.55A5.48,5.48,0,0,0,112.84,194.63Z"
+                  ></path><path
+                    class="cls-5"
+                    d="M2,107.45A5.4,5.4,0,0,0,2.21,116l105.86,77.79.1,0a5.53,5.53,0,0,0,1.39.71l.15,0a5.42,5.42,0,0,0,1.56.25L28.41,86.48Z"
+                  ></path><path
+                    class="cls-6"
+                    d="M113,194.59a5.53,5.53,0,0,0,1.39-.71l.1,0L220.34,116a5.41,5.41,0,0,0,.16-8.59l-26.36-21-82.87,108.4a5.48,5.48,0,0,0,1.57-.25Z"
+                  ></path><polygon
+                    class="cls-7"
+                    points="111.27 194.88 147.98 31.3 144.87 33.33 111.27 194.88"
+                  ></polygon><polygon
+                    class="cls-8"
+                    points="111.27 194.88 194.14 86.48 197.6 89.23 111.27 194.88"
+                  ></polygon>
+                </g>
+              </g>
+            </g>
           </g>
         </svg>
       </a>
