--- a/runtime/src/view/index.html
+++ b/runtime/src/view/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <div id="opwork-root"></div>
-    <script type="module" src="./main.tsx"></script>
+    <script type="module" src="/admin/main.tsx"></script>
   </body>
 </html>
