--- a/runtime/src/view/styles/antd.less
+++ b/runtime/src/view/styles/antd.less
@@ -1,2 +1,3 @@
-@import "antd/lib/style/themes/default.less";
-@import "antd/dist/antd.less";
+@import 'antd/lib/style/themes/default.less';
+@import 'antd/lib/style/themes/compact.less';
+@import 'antd/dist/antd.less';
