--- a/runtime/src/view/index.html
+++ b/runtime/src/view/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Runtime - OpWork.dev</title>
+    <base href="/admin/" />
     <link
       rel="shortcut icon"
       href="./images/logo/colour.svg"
@@ -13,6 +14,6 @@
   </head>
   <body>
     <div id="opwork-root"></div>
-    <script type="module" src="/admin/main.tsx"></script>
+    <script type="module" src="main.tsx"></script>
   </body>
 </html>
